<resources>
    <string name="app_name">Budget Planner</string>
    <string name="add_category">Add</string>
    <string name="action_settings">Settings</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="add_item">Add</string>
    <string name="balance">Balance</string>
    <string name="zero">0</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="item_info_not_empty">Please fill out all the required information</string>
    <string name="external_storage">External storage</string>
    <string name="permission_title">Permission necessary</string>
    <string name="permission_message">permission is necessary</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="update_item_failed">Error updating item</string>
    <string name="update_item_successful">Item updated successful</string>
    <string name="update_failed">Update failed</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="edit_item">Edit</string>
    <string name="btn_call">Call</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="delete_dialog_title">Are you sure you want to delete?</string>
    <string name="delete_item_failed">Error deleting</string>
    <string name="delete_item_successful">Deleted successful</string>
    <string name="empty_view">Your Budget list is empty</string>
    <string name="budget_app">Budget Planner</string>
    <string name="mobile_application_development">Mobile Application Development</string>
    <string name="it448">IT448</string>
    <string name="abdulrahman_almuhanna">Abdulrahman AlMuhanna</string>
</resources>
